<resources>
    <string name="app_name">Cancer Detection</string>
    <string name="gallery">Galeri</string>
    <string name="analyze">Analisis</string>
    <string name="result">Hasil Analisis</string>
    <string name="image_classifier_failed">Image Classifier gagal melakukan inisialisasi</string>
    <string name="history">History</string>
    <string name="preview">Preview Image</string>
    <string name="nav_view_shared_element_transition_name">navigation_view_shared_element</string>
    <string name="image_required">Silahkan masukkan gambar</string>
    <string name="article_recommend">Rekomendasi Artikel</string>
    <string name="image_result">Image Result</string>
    <string name="icon_image">Icon Image</string>
    <string name="home">Home</string>
    <string name="pilih_gambar_yang_ingin_dieteksi">Pilih gambar yang ingin dieteksi</string>
    <string name="imageforanalyz">imageForAnalyz</string>
    <string name="doctor_icon">doctor icon</string>
    <string name="titleWelcome">Skin Cancer Detector</string>
    <string name="deskripsiWelcome">Aplikasi deteksi kanker kulit untuk anda!\nCegah sekarang untuk hari esok yang tenang.\n\n\nCukup sekali klik, sleanjutnya biarkan kami yang bekerja!</string>
    <string name="deteksi_sekarang">Deteksi Sekarang!</string>
    <string name="skin_cancer_detector_home">Skin Cancer Detector</string>
    <string name="app_logo">App Logo</string>
    <string name="empty_image_warning">"Tidak ada gambar yang ditemukan "</string>
    <string name="preview_image">Preview Image</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="scancancer">ScanCancer</string>
    <string name="des_home">Cek kondisi kulitmu!\nCari tahu masalah kulitmu dengan sekali klik!</string>
    <string name="judul_artikel">Judul Artikel</string>
    <string name="tanggal_publikasi">Tanggal Publikasi</string>
    <string name="author">Author</string>
    <string name="cari_tahu_tentang_kanker">Cari Tahu Tentang Kanker</string>
    <string name="identifikasi_kenali_dan_cegah">Identifikasi, kenali, dan cegah!</string>
    <string name="kembali">Home</string>
    <string name="simpan">Simpan</string>
    <string name="deskripsi_analisis">Hasil dari deteksi tidak sepenuhnya akurat. Pastikan gambar terlihat jelas untuk menambah keakuratan identifikasi.</string>
    <string name="analyze_date">Analyze Date</string>
    <string name="analyze_result">Analyze Result</string>
    <string name="hapus">Hapus</string>
    <string name="close">Close</string>
</resources>